--- a/flask_backend/requirements.txt
+++ b/flask_backend/requirements.txt
@@ -1,22 +1,33 @@
-# Flask web framework
-Flask==3.0.0
-
-# Allow frontend to connect to backend
-flask-cors==4.0.0
-
-# JWT authentication (login tokens)
-flask-jwt-extended==4.6.0
-
-# Load environment variables from .env file
-python-dotenv==1.0.0
-
-# Database ORM
-flask-sqlalchemy==3.1.1
-
-# OAuth for social login
-authlib==1.3.0
-
-# HTTP library for making API requests
+alembic==1.16.5
+Authlib==1.3.0
+bcrypt==5.0.0
+blinker==1.9.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
+cryptography==46.0.2
+Flask==3.1.2
+Flask-Bcrypt==1.0.1
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.2.4
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.3
+psycopg==3.2.10
+psycopg-binary==3.2.10
+psycopg-pool==3.2.6
+pycparser==2.23
+PyJWT==2.10.1
+python-dotenv==1.1.1
 requests==2.31.0
-
-sqlalchemy-serializer==1.4.1
+SQLAlchemy==2.0.43
+SQLAlchemy-serializer==1.4.1
+typing_extensions==4.15.0
+urllib3==2.5.0
+Werkzeug==3.1.3
